# ImageProcessingLambda

./: .gitignore  LICENSE  pyproject.toml  pyrightconfig.json
src/modules/image_orientation/domain/interfaces/: __init__.py  i_image_processing_strategy.py
src/modules/image_orientation/domain/models/: images.py  paths.py
src/modules/image_orientation/strategies/images/: face_orientation_strategy.py  text_orientation_strategy.py
src/modules/image_processing/constants/: documents_types.py
src/modules/image_processing/interfaces/: __init__.py  i_contextual_image_processor.py
src/modules/image_processing/services/: contextual_image_processor.py
src/modules/image_processing/strategies/: strategy_mapping.py
src/modules/image_processing/strategies/images/: text_orientation_strategy.py
src/modules/image_processing/use_cases/: fix_image_orientation_use_case.py
src/shared/constants/: status_codes.py
src/shared/errors/: __init__.py  conflict_error.py  not_found_error.py  validation_error.py
src/shared/files_adapters/: local_file_adapter.py
src/shared/interfaces/: __init__.py  i_file_adapter.py  i_use_case.py
src/shared/types/: __init__.py  images.py
tests/unit/modules/image_orientation/domain/models/: test_local_destination_path.py  test_local_source_path.py
tests/utils/: local_file_adapter.py
