[tool.poetry]
name = "image-processing"
version = "0.1.0"
description = ""
authors = ["Mateus Aguiar <aguiar_m@ymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
